feat(clock): improve clock animations

--- a/clock/clock.css
+++ b/clock/clock.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
+* {
+	user-select: none;
+	-moz-user-select: none;
+}
+
 html, body {
 	height: 100%;
 
@@ -8,7 +13,8 @@ html, body {
 	font-family: Roboto, sans-serif;
 
 	box-sizing: border-box;
-	background: rgb(5, 5, 5);
+	background: rgb(6, 7, 8);
+	/* background: #fff; */
 }
 
 .clock {
@@ -20,29 +26,45 @@ html, body {
 }
 
 .clock-content {
-	width: 680px;
+	width: 480px;
 
 	padding: 80px;
 
-	background: rgb(15, 16, 17);
-	user-select: none;
+	background: rgb(6, 7, 8);
+	opacity: 0;
+	animation: fade 1s ease-in;
+	animation-fill-mode: forwards;
+}
+
+@keyframes fade {
+	0%   {opacity: 0;}
+	100% {opacity: 1;}
 }
 
 .clock-letter {
 	display: inline-block;
-	width: 50px;
+	width: 40px;
 
-	margin: 8px 4px;
-	padding: 10px 0;
+	padding: 12px 0;
 
 	text-align: center;
-	color: rgb(32, 32, 32);
-	font-size: 26px;
+	color: rgb(25, 25, 25);
+	font-size: 20px;
 	font-weight: 700;
+
+	transition: color 0.5s;
 }
 
 .clock-letter_active {
 	color: rgb(148, 238, 226);
+	animation: alive 6s infinite linear;
+	animation-delay: 1s;
+}
+
+@keyframes alive {
+	0%   {color: rgb(148, 238, 226);}
+	50%  {color: rgb(25, 25, 25);}
+	100% {color: rgb(148, 238, 226);}
 }
 
 @media (max-width: 1024px) {
